# game-engine

./: .clang-format  CMakeLists.txt  Dockerfile  IPlugin.h  README.md  engine_core.cpp  engine_core.h  main.cpp  plugin.cpp  plugin.h  render.cpp  render.h
.devcontainer/: devcontainer.json
docs/: GCC_Compilation.md
scripts/: clang_format.sh
